--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -759,3 +759,23 @@ body {
     margin: -20px 0 30px 0;
   }
 }
+
+.soc-links a {
+  font-size: 18px;
+  display: inline-block;
+  color: #fff;
+  line-height: 1;
+  padding: 8px 0;
+  margin-right: 4px;
+  border-radius: 4px;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  transition: 0.3s;
+  background: #0a1e38;
+}
+.soc-links a:hover, .soc-links a:focus{
+  color: #0a1e38;
+  background: #FCA433;
+  text-decoration: none;
+}
